--- a/.gitlab/ci/bases.yml
+++ b/.gitlab/ci/bases.yml
@@ -83,7 +83,7 @@ variables:
 
 .precautions_base:
   stage: .pre
-  image: ${CI_REGISTRY}/kaios/gecko-dev/lint:3d9d58d5_3
+  image: ${CI_REGISTRY}/kaios/gecko-dev/lint:da2bfc77
   tags:
     - gecko-lint
   variables:
@@ -147,10 +147,8 @@ variables:
   # since this is basically built by `mach taskcluster-build-image lint` command,
   # hence probably needs update due to upstream changes.
   # 3d9d58d5 is the commit of gecko in which this image was built.
-  # 3d9d58d5_1 add a layer of packages update base on 3d9d58d5.
-  # 3d9d58d5_2 could be used by bug 127255.
-  # 3d9d58d5_3 update node to v14.17.3.
-  image: ${CI_REGISTRY}/kaios/gecko-dev/lint:3d9d58d5_3
+  # 3d9d58d5_1 add a layer of packages update base on da2bfc77.
+  image: ${CI_REGISTRY}/kaios/gecko-dev/lint:da2bfc77
   tags:
     - gecko-lint
   variables:
